# auto_stock_trading_agents

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: events.yaml  macro.yaml  news_sources.yaml  pead.yaml  settings.yaml  watchlist.yaml
config/knowledge/: 光互联.md  铜连接.md
config/pead/: 000660.KS.yaml  AAOI.yaml  AMZN.yaml  ASML.yaml  AXT.yaml  COHR.yaml  CRDO.yaml  GOOG.yaml  KLAC.yaml  LITE.yaml  LRCX.yaml  MSFT.yaml  NVDA.yaml  SKHY.yaml  TSM.yaml  VRT.yaml  _defaults.yaml
config/sectors/: ai_hardware.yaml
docs/: DATA_SOURCES.md  DESIGN.md  GO_LIVE.md  SECTOR_ANALYST.md  WORKFLOWS.md
scripts/: check_data.py  start_thetadata.sh  start_tunnel.sh
src/ats/: __init__.py  config.py
src/ats/agents/: __init__.py  analysts.py  base.py  manager.py  outputs.py  risk_manager.py  risk_validator.py
src/ats/broker/: __init__.py  ibkr.py
src/ats/channel/: __init__.py  base.py  cli_channel.py  context.py  feishu_bot.py  feishu_channel.py
src/ats/data/: __init__.py  base.py  consensus.py  documents.py  earnings_calendar.py  factset.py  fiscal.py  fundamentals.py  indicators.py  industry.py  macro.py  market_data.py  news.py  options.py  (+6 more)
tests/: conftest.py  test_agents.py  test_broker_risk.py  test_chief.py  test_chief_graph.py  test_cycle.py  test_events.py  test_feishu.py  test_feishu_bot.py  test_fiscal.py  test_industry.py  test_macro_strategy.py  test_manager.py  test_market_data.py  test_memory.py  test_monitor.py  test_news.py  test_param_leak_repair.py  test_pead_async.py  test_pead_data.py  test_pead_graph.py  test_pead_report.py  test_pead_score.py  test_pead_signal_chain.py  test_research.py  test_risk.py  test_risk_validator.py  test_scheduler.py  test_schemas.py  test_sector.py  test_server.py  test_trader.py  test_triage.py
(+98 files in other folders)
