[project]
name = "ats"
version = "0.1.0"
description = "Multi-agent automated stock trading system (IBKR paper, LangGraph, HITL)"
readme = "docs/DESIGN.md"
requires-python = ">=3.11"
dependencies = [
    # orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2",       # default LLM path: OpenRouter (OpenAI-compatible)
    # data contracts / config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # llm provider abstraction (OpenAI-compatible swap)
    "litellm>=1.50",
    # resilience
    "tenacity>=8.3",
]

[project.optional-dependencies]
# Installed as phases land; kept optional so Phase 1/2 stay lightweight.
data = [
    "yfinance>=0.2.40",
    "curl_cffi>=0.15",   # browser TLS impersonation for yfinance (avoids Yahoo rate-limits)
    "edgartools>=3.0",
    "fredapi>=0.5",
    "praw>=7.7",
    "pandas>=2.2",
    "pandas-ta>=0.3.14b",
    "feedparser>=6.0",
    "pypdf>=4.0",
]
broker = ["ib_async>=1.0"]
memory = ["chromadb>=0.5"]
schedule = ["apscheduler>=3.10", "pandas_market_calendars>=4.4"]
memory_persist = ["langgraph-checkpoint-sqlite>=2.0"]
# Boss interactive channels: Feishu via httpx + a FastAPI webhook; Discord later.
channel = ["fastapi>=0.110", "uvicorn>=0.29", "discord.py>=2.4"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
ats = "ats.runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ats"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
